--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -8,6 +8,10 @@
 {% block title %}Register{% endblock %}
 
 {% block main %}
+<!-- Display message if it exists -->
+{% if message %}
+<div class="alert alert-danger">{{ message }}</div>
+{% endif %}
 <!--Implementation of Bootstrap Form. Source: https://bootstrapexamples.com/@prajwal/simple-login-form-2-->
 <div class="container">
     <h2 class="text-center">Register</h2>
